--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,53 @@
 git:
   submodules: false
 
-language: cpp
+sudo: required
+dist: trusty
 
-compiler:
-  - gcc
-  - clang
+language: c++
 
-
+#compiler:
+#  - gcc
+#  - clang
 
 matrix:
   include:
     - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-      osx_image: xcode9.4
-    - os: osx
-      osx_image: xcode9
-    - os: osx
-      osx_image: xcode8
+      compiler: gcc-7
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+            - libgl1-mesa-dev
+            - libegl1-mesa-dev
+            - libgles2-mesa-dev
+            - libglu1-mesa-dev
+            - xorg-dev
+    - os: linux
+      compiler: gcc-8
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+            - libgl1-mesa-dev
+            - libegl1-mesa-dev
+            - libgles2-mesa-dev
+            - libglu1-mesa-dev
+            - xorg-dev
+#    - os: osx
+#      osx_image: xcode9.4
+#    - os: osx
+#      osx_image: xcode9
+#    - os: osx
+#      osx_image: xcode8
 
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
-install:
-  - sudo apt-get install -qq g++-7
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
-  - sudo apt-get install xorg-dev libglu1-mesa-dev
 
 script:
   - cmake -H. -Bbuild
