--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ matrix:
   include:
     - os: linux
       compiler: gcc-7
+      env:
+        - C_COMPILER=gcc-7
+        - CXX_COMPILER=g++-7
       addons:
         apt:
           sources:
@@ -50,6 +53,8 @@ before_install:
   - git submodule update --init --recursive
 
 script:
-  - cmake -H. -Bbuild
+  - mkdir build
   - cd build
-  - cmake --build .
+  - cmake .. -DCMAKE_C_COMPILER=$C_COMPILER -DCMAKE_CXX_COMPILER=$CXX_COMPILER
+  #- cmake --build .
+  - make
