--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ matrix:
             - xorg-dev
     - os: linux
       compiler: gcc-8
+      env:
+        - C_COMPILER=gcc-8
+        - CXX_COMPILER=g++-8
       addons:
         apt:
           sources:
